--- a/templates/index.html
+++ b/templates/index.html
@@ -89,13 +89,22 @@
               <form id="login-form" method="post" action="{% url 'login' %}">
                 {% csrf_token %}
                 <h3 class="fw-normal">Log in</h3>
+                
+                {% if messages %}
+                  {% for message in messages %}
+                    <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %} alert-dismissible fade show" role="alert">
+                      {{ message }}
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                  {% endfor %}
+                {% endif %}
 
                 <div data-mdb-input-init class="form-outline">
                   <input
                     name="username"
-                    type="email"
+                    type="text"
                     class="form-control form-control-lg"
-                    placeholder="Email address"
+                    placeholder="Username"
                     required
                   />
                 </div>
