--- a/templates/process_sale.html
+++ b/templates/process_sale.html
@@ -121,7 +121,12 @@
                                         </label>
                                         <input type="number" class="form-control" id="unit_price" name="unit_price" 
                                                value="{{ item.srp_price|floatformat:2 }}" step="0.01" min="0" required>
-                                        <div class="form-text">SRP: ₱{{ item.srp_price|floatformat:2 }}</div>
+                                        <div class="form-text">
+                                            SRP: ₱{{ item.srp_price|floatformat:2 }}
+                                            {% if item.discount_price %}
+                                                <br>Discount: ₱{{ item.discount_price|floatformat:2 }}
+                                            {% endif %}
+                                        </div>
                                     </div>
                                 </div>
                             </div>
